--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@monorepo-utils/workspaces-to-typescript-project-references": "^2.9.0",
     "@tsconfig/strictest": "^1.0.2",
+    "@types/jest": "^29.4.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "eslint": "^8.32.0",
@@ -21,7 +22,8 @@
     "husky": "^8.0.0",
     "jest": "^29.4.1",
     "prettier": "^2.8.3",
-    "pretty-quick": "^3.1.3"
+    "pretty-quick": "^3.1.3",
+    "ts-jest": "^29.0.5"
   },
   "scripts": {
     "prepare": "husky install"
