--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -6,12 +6,5 @@
   },
   "include": ["src"],
   "exclude": ["test"],
-  "references": [
-    {
-      "path": "../utils"
-    },
-    {
-      "path": "../lexer"
-    }
-  ]
+  "references": []
 }
