--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -5,8 +5,9 @@
     "declaration": true,
     "declarationMap": true,
     "incremental": true,
-    "target": "ES6",
+    "target": "es2021",
     "esModuleInterop": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "module": "CommonJS"
   }
 }
