--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,11 @@
 {
+  "files": [],
   "references": [
     { "path": "packages/compiler" },
     { "path": "packages/lsp-client" },
     { "path": "packages/lsp-server" },
-    { "path": "packages/parser" }
+    { "path": "packages/parser" },
+    { "path": "packages/lexer" },
+    { "path": "packages/utils" }
   ]
 }
