--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "test": "node --inspect-brk node_modules/.bin/jest --runInBand"
+    "test": "node --inspect-brk node_modules/.bin/jest --runInBand",
+    "update-refs": "workspaces-to-typescript-project-references"
   }
 }
