--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "@monocle-lang/compiler",
-    "version": "1.0.0",
-    "description": "Compiler for Monocle",
-    "main": "lib/index.js",
-    "repository": "https://github.com/mikeosunajr/monocle",
-    "author": "Michael Osuna Jr",
-    "license": "MIT"
+  "name": "@monocle-lang/compiler",
+  "version": "1.0.0",
+  "description": "Compiler for Monocle",
+  "main": "lib/index.js",
+  "repository": "https://github.com/solidarity-software/monocle.git",
+  "author": "Michael Osuna Jr",
+  "license": "MIT"
 }
