--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,14 +3,16 @@
   "tasks": [
     {
       "type": "npm",
-      "script": "test",
-      "group": {
-        "kind": "test",
-        "isDefault": true
+      "script": "watch",
+      "problemMatcher": "$tsc-watch",
+      "isBackground": true,
+      "presentation": {
+        "reveal": "never"
       },
-      "problemMatcher": [],
-      "label": "npm: test",
-      "detail": "node --inspect-brk node_modules/.bin/jest --runInBand"
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
     }
   ]
 }
