--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,6 +13,12 @@
         "kind": "build",
         "isDefault": true
       }
+    },
+    {
+      "label": "Update Project References",
+      "type": "npm",
+      "script": "update-refs",
+      "problemMatcher": []
     }
   ]
 }
