--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -16,7 +16,7 @@
   "contributes": {
     "commands": [
       {
-        "command": "helloworld.helloWorld",
+        "command": "monocle.helloWorld",
         "title": "Hello World"
       }
     ]
@@ -27,6 +27,10 @@
     "watch": "tsc -watch -p ./"
   },
   "devDependencies": {
-    "@types/vscode": "^1.76.0"
+    "@types/mocha": "^10.0.1",
+    "@types/vscode": "^1.76.0",
+    "@vscode/test-electron": "^2.3.0",
+    "glob": "^9.2.1",
+    "mocha": "^10.2.0"
   }
 }
