--- a/packages/compiler/tsconfig.json
+++ b/packages/compiler/tsconfig.json
@@ -6,5 +6,9 @@
   },
   "include": ["src"],
   "exclude": ["test"],
-  "references": []
+  "references": [
+    {
+      "path": "../parser"
+    }
+  ]
 }
